fix paren horizontal alignment in browsers that support transform

--- a/mathquill.css
+++ b/mathquill.css
@@ -364,11 +364,11 @@
 .mathquill-rendered-math .paren {
   padding: 0 .1em;
   vertical-align: bottom;
-  -webkit-transform-origin: bottom left;
-  -moz-transform-origin: bottom left;
-  -ms-transform-origin: bottom left;
-  -o-transform-origin: bottom left;
-  transform-origin: bottom left;
+  -webkit-transform-origin: bottom center;
+  -moz-transform-origin: bottom center;
+  -ms-transform-origin: bottom center;
+  -o-transform-origin: bottom center;
+  transform-origin: bottom center;
 }
 
 .mathquill-rendered-math .array {
